# pytest-pyapp

./: .gitignore  README.md  pyproject.toml
src/pytest_pyapp/: __init__.py  plugin.py
tests/: test_pytest_pyapp.py
